--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Control LED Particle</title>
+    <title>Control de Foco - Particle</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-    <h1>Control de LED</h1>
+    <h1>Control del Foco</h1>
 
     <div class="botones">
-        <button id="btnOn">Encender</button>
-        <button id="btnOff">Apagar</button>
+        <button id="btnOn">ENCENDER</button>
+        <button id="btnOff">APAGAR</button>
     </div>
 
     <p id="estado"></p>
