--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Práctica 29 - Temperatura y Humedad</title>
+    <title>Examen IoT 2</title>
 
     <link rel="stylesheet" href="/styles.css">
 
