--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Examen IoT 2</title>
+    <title>Práctica 29 – Examen IoT</title>
 
     <link rel="stylesheet" href="/styles.css">
 
@@ -18,23 +18,23 @@
 
 <body>
 
-    <h1>Práctica 29 – Control Automático</h1>
+    <h1>Práctica 29 – Control Automático IoT</h1>
 
     <div id="panel">
 
         <div class="box">
-            <h3>Temperatura</h3>
+            <h3>Temperatura °C</h3>
             <div id="gaugeTemp" class="gauge"></div>
             <p id="tempVal">-- °C</p>
         </div>
 
         <div class="box">
-            <h3>Humedad</h3>
+            <h3>Humedad %</h3>
             <div id="gaugeHum" class="gauge"></div>
             <p id="humVal">-- %</p>
         </div>
 
-        <div class="box" id="estadoBox">
+        <div class="box">
             <h3>Estado</h3>
             <p id="estado">---</p>
         </div>
